--- a/empleobusca.com/data/buenos_aires/buenos_aires_p24.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p24.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4396,118 +4396,6 @@ Hace  3  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-pastelero-en-buenos-aires">
-<span>
-
-                Pastelero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-en-buenos-aires">
-<span>
-
-                Cajeros/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-buenos-aires">
-<span>
-
-                Técnico/a electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administracion-en-buenos-aires">
-<span>
-
-                Administración
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-buenos-aires">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-coordinador-en-buenos-aires">
-<span>
-
-                Coordinador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-buenos-aires">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-buenos-aires">
-<span>
-
-                Ejecutivo/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-call-center-en-buenos-aires">
-<span>
-
-                Call center
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-buenos-aires">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-de-salon-en-buenos-aires">
-<span>
-
-                Vendedor/a de salón
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-buenos-aires">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-buenos-aires">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-encargado-en-buenos-aires">
-<span>
-
-                Encargado/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
