--- a/empleobusca.com/data/buenos_aires/buenos_aires_p3.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p3.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4323,118 +4323,6 @@ Hace  7  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-contable-en-buenos-aires">
-<span>
-
-                Administrativo contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-buenos-aires">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-buenos-aires">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-buenos-aires">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comprador-en-buenos-aires">
-<span>
-
-                Comprador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-de-ventas-en-buenos-aires">
-<span>
-
-                Agente de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-clarkista-en-buenos-aires">
-<span>
-
-                Clarkista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-buenos-aires">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnicos-electronicos-en-buenos-aires">
-<span>
-
-                Técnicos electrónicos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-telemarketer-en-buenos-aires">
-<span>
-
-                Telemarketer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-buenos-aires">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-buenos-aires">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-buenos-aires">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vigilador-en-buenos-aires">
-<span>
-
-                Vigilador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
