--- a/empleobusca.com/data/home.html
+++ b/empleobusca.com/data/home.html
@@ -96,7 +96,7 @@
 
 	<div class="container">
 
-		<a class="logo" title="Computrabajo" href="https://ar.computrabajo.com">
+		<a class="logo" title="Computrabajo" href="/data/home.html">
 
 			<img width="133" height="30" alt="Computrabajo Argentina" data-header-candidatos src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" class="logo_img" />
 
@@ -104,7 +104,7 @@
 
 			<div class="menu_links">
 
-				<a class=sel href="https://ar.computrabajo.com" title="Buscar ofertas">
+				<a class=sel href="/data/home.html" title="Buscar ofertas">
 
 					Buscar ofertas
 
@@ -436,7 +436,7 @@
 
             <video autoplay="" loop="" muted="" class="home_video">
 
-                <source src="//cp.ct-stc.com/web8/20251126.01_01.26/c/video/video_public_landing.mp4" type="video/mp4">
+                <source src="../data/videoHome.mp4" type="video/mp4">
 
             </video>
 
