--- a/empleobusca.com/data/buenos_aires/buenos_aires_p13.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p13.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4338,118 +4338,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-buenos-aires">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-especialistas-en-buenos-aires">
-<span>
-
-                Especialistas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-buenos-aires">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-buenos-aires">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-mantenimiento-en-buenos-aires">
-<span>
-
-                Técnico/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-buenos-aires">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-en-buenos-aires">
-<span>
-
-                Administrativo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-desarrollador-en-buenos-aires">
-<span>
-
-                Desarrollador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-buenos-aires">
-<span>
-
-                Operario/a de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativa-en-buenos-aires">
-<span>
-
-                Administrativa
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recepcionista-en-buenos-aires">
-<span>
-
-                Recepcionista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-telefonico-en-buenos-aires">
-<span>
-
-                Vendedor telefónico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-de-ventas-en-buenos-aires">
-<span>
-
-                Ejecutivo de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-de-cocina-en-buenos-aires">
-<span>
-
-                Ayudante de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-auxiliar-en-buenos-aires">
-<span>
-
-                Auxiliar
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
