--- a/empleobusca.com/data/buenos_aires/buenos_aires_p15.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p15.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4217,118 +4217,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-agente-de-ventas-en-buenos-aires">
-<span>
-
-                Agente de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ventas-en-buenos-aires">
-<span>
-
-                Ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-buenos-aires">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-buenos-aires">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-buenos-aires">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-buenos-aires">
-<span>
-
-                Jefe/a de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-soporte-en-buenos-aires">
-<span>
-
-                Técnico/a de soporte
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mantenimientos-en-buenos-aires">
-<span>
-
-                Mantenimientos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comercial-en-buenos-aires">
-<span>
-
-                Comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-buenos-aires">
-<span>
-
-                Vendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vigilador-en-buenos-aires">
-<span>
-
-                Vigilador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-buenos-aires">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-limpieza-en-buenos-aires">
-<span>
-
-                Operario/a de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-buenos-aires">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-buenos-aires">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
