--- a/empleobusca.com/data/buenos_aires/buenos_aires_p17.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p17.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4313,118 +4313,6 @@ Hace  2  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-de-ventas-en-buenos-aires">
-<span>
-
-                Ejecutivo de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-en-buenos-aires">
-<span>
-
-                Técnico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-buenos-aires">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-en-buenos-aires">
-<span>
-
-                Operario/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-buenos-aires">
-<span>
-
-                Ejecutivo/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operador-en-buenos-aires">
-<span>
-
-                Operador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-buenos-aires">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-desarrollador-en-buenos-aires">
-<span>
-
-                Desarrollador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-buenos-aires">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-buenos-aires">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-buenos-aires">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-mantenimiento-en-buenos-aires">
-<span>
-
-                Operario/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comercio-exterior-en-buenos-aires">
-<span>
-
-                Comercio Exterior
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-buenos-aires">
-<span>
-
-                Vendedor
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
