--- a/empleobusca.com/data/buenos_aires/buenos_aires_p18.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p18.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4349,118 +4349,6 @@ Planes de formación</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-vendedora-en-buenos-aires">
-<span>
-
-                Vendedora
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-en-buenos-aires">
-<span>
-
-                Ejecutivo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recursos-humanos-en-buenos-aires">
-<span>
-
-                Recursos humanos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-buenos-aires">
-<span>
-
-                Operario/a de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-buenos-aires">
-<span>
-
-                Vendedor
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-supervisor-en-buenos-aires">
-<span>
-
-                Supervisor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-buenos-aires">
-<span>
-
-                Jefe/a de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-auxiliar-en-buenos-aires">
-<span>
-
-                Auxiliar
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-buenos-aires">
-<span>
-
-                Operario/a de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-buenos-aires">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-buenos-aires">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesores-comerciales-en-buenos-aires">
-<span>
-
-                Asesores/as comerciales
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-buenos-aires">
-<span>
-
-                Asistente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-encargado-en-buenos-aires">
-<span>
-
-                Encargado/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-buenos-aires">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
