--- a/empleobusca.com/data/buenos_aires/buenos_aires_p22.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p22.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4226,118 +4226,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operario-en-buenos-aires">
-<span>
-
-                Operario/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-buenos-aires">
-<span>
-
-                Vendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesores-comerciales-en-buenos-aires">
-<span>
-
-                Asesores/as comerciales
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-buenos-aires">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositor-en-buenos-aires">
-<span>
-
-                Repositor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-buenos-aires">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-buenos-aires">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comprador-en-buenos-aires">
-<span>
-
-                Comprador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administracion-en-buenos-aires">
-<span>
-
-                Administración
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-pastelero-en-buenos-aires">
-<span>
-
-                Pastelero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-en-buenos-aires">
-<span>
-
-                Chófer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maquinista-en-buenos-aires">
-<span>
-
-                Maquinista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-limpieza-en-buenos-aires">
-<span>
-
-                Operario/a de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-buenos-aires">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
