--- a/empleobusca.com/data/buenos_aires/buenos_aires_p25.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p25.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4473,118 +4473,6 @@ Hace  6  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-comercial-en-buenos-aires">
-<span>
-
-                Comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-buenos-aires">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-contables-y-administrativos-en-buenos-aires">
-<span>
-
-                Contables y administrativos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-buenos-aires">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-de-salon-en-buenos-aires">
-<span>
-
-                Vendedor/a de salón
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-restaurantes-en-buenos-aires">
-<span>
-
-                Restaurantes
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-personal-de-limpieza-en-buenos-aires">
-<span>
-
-                Personal de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-buenos-aires">
-<span>
-
-                Vendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-mantenimiento-en-buenos-aires">
-<span>
-
-                Técnico/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maquinista-en-buenos-aires">
-<span>
-
-                Maquinista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-promovendedor-en-buenos-aires">
-<span>
-
-                Promovendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativa-en-buenos-aires">
-<span>
-
-                Administrativa
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-buenos-aires">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-clarkista-en-buenos-aires">
-<span>
-
-                Clarkista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-camion-en-buenos-aires">
-<span>
-
-                Chófer de camión
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
