--- a/empleobusca.com/data/buenos_aires/buenos_aires_p26.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p26.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4390,118 +4390,6 @@ Hace  5  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-deposito-en-buenos-aires">
-<span>
-
-                Operarios/as de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-de-cocina-en-buenos-aires">
-<span>
-
-                Ayudante de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-contables-y-administrativos-en-buenos-aires">
-<span>
-
-                Contables y administrativos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-preventista-en-buenos-aires">
-<span>
-
-                Vendedor preventista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-buenos-aires">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-clarkista-en-buenos-aires">
-<span>
-
-                Clarkista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-en-buenos-aires">
-<span>
-
-                Cajeros/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-buenos-aires">
-<span>
-
-                Jefe/a de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajero-en-buenos-aires">
-<span>
-
-                Cajero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-viajante-en-buenos-aires">
-<span>
-
-                Vendedor viajante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-armador-en-buenos-aires">
-<span>
-
-                Armador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ventas-en-buenos-aires">
-<span>
-
-                Ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-buenos-aires">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-buenos-aires">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-buenos-aires">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
