--- a/empleobusca.com/data/buenos_aires/buenos_aires_p29.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p29.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4266,118 +4266,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-reparto-en-buenos-aires">
-<span>
-
-                Chófer de reparto
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-project-manager-en-buenos-aires">
-<span>
-
-                Project manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-en-buenos-aires">
-<span>
-
-                Operario/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-buenos-aires">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-buenos-aires">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-buenos-aires">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-buenos-aires">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-en-buenos-aires">
-<span>
-
-                Administrativo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-cliente-en-buenos-aires">
-<span>
-
-                Atención al cliente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-buenos-aires">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-buenos-aires">
-<span>
-
-                Ejecutivo comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-viajante-en-buenos-aires">
-<span>
-
-                Vendedor viajante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-buenos-aires">
-<span>
-
-                Jefe/a de cocina
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
