--- a/empleobusca.com/data/buenos_aires/buenos_aires_p30.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p30.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4243,118 +4243,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-asesores-comerciales-en-buenos-aires">
-<span>
-
-                Asesores/as comerciales
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-logistica-en-buenos-aires">
-<span>
-
-                Logística
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-coordinador-en-buenos-aires">
-<span>
-
-                Coordinador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-de-ventas-en-buenos-aires">
-<span>
-
-                Asesor/a de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administracion-en-buenos-aires">
-<span>
-
-                Administración
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comprador-en-buenos-aires">
-<span>
-
-                Comprador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-buenos-aires">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-buenos-aires">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-supervisor-en-buenos-aires">
-<span>
-
-                Supervisor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-auxiliar-en-buenos-aires">
-<span>
-
-                Auxiliar
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-buenos-aires">
-<span>
-
-                Operario de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-residentes-en-buenos-aires">
-<span>
-
-                Residentes
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-promovendedor-en-buenos-aires">
-<span>
-
-                Promovendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-en-buenos-aires">
-<span>
-
-                Técnico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-camion-en-buenos-aires">
-<span>
-
-                Chófer de camión
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
