--- a/empleobusca.com/data/buenos_aires/buenos_aires_p6.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p6.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4291,118 +4291,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operario-en-buenos-aires">
-<span>
-
-                Operario/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-buenos-aires">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-cliente-en-buenos-aires">
-<span>
-
-                Atención al cliente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-reparto-en-buenos-aires">
-<span>
-
-                Chófer de reparto
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-buenos-aires">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativa-en-buenos-aires">
-<span>
-
-                Administrativa
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recepcionista-en-buenos-aires">
-<span>
-
-                Recepcionista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-especialistas-en-buenos-aires">
-<span>
-
-                Especialistas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-buenos-aires">
-<span>
-
-                Operario/a de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-buenos-aires">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-telefonico-en-buenos-aires">
-<span>
-
-                Vendedor telefónico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-armador-en-buenos-aires">
-<span>
-
-                Armador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-de-ventas-en-buenos-aires">
-<span>
-
-                Ejecutivo de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-buenos-aires">
-<span>
-
-                Asistente
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
