--- a/empleobusca.com/data/buenos_aires/buenos_aires_p9.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p9.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251204.01_01.27/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4353,118 +4353,6 @@ Hace  2  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-buenos-aires">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vigilador-en-buenos-aires">
-<span>
-
-                Vigilador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-pastelero-en-buenos-aires">
-<span>
-
-                Pastelero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-carnicero-en-buenos-aires">
-<span>
-
-                Carnicero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-buenos-aires">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-en-buenos-aires">
-<span>
-
-                Administrativo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-telefonico-en-buenos-aires">
-<span>
-
-                Vendedor telefónico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-buenos-aires">
-<span>
-
-                Técnico electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-buenos-aires">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-personal-de-limpieza-en-buenos-aires">
-<span>
-
-                Personal de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedora-en-buenos-aires">
-<span>
-
-                Vendedora
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-buenos-aires">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-buenos-aires">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositor-en-buenos-aires">
-<span>
-
-                Repositor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-buenos-aires">
-<span>
-
-                Técnico/a electromecánico
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
