--- a/empleobusca.com/data/cordoba/cordoba_p1.html
+++ b/empleobusca.com/data/cordoba/cordoba_p1.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4310,118 +4310,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-vigilador-en-cordoba">
-<span>
-
-                Vigilador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-cordoba">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-cordoba">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-supervisor-en-cordoba">
-<span>
-
-                Supervisor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-cordoba">
-<span>
-
-                Operario/a de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-residentes-en-cordoba">
-<span>
-
-                Residentes
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositor-en-cordoba">
-<span>
-
-                Repositor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-cordoba">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-call-center-en-cordoba">
-<span>
-
-                Call center
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-promovendedor-en-cordoba">
-<span>
-
-                Promovendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comercial-en-cordoba">
-<span>
-
-                Comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-en-cordoba">
-<span>
-
-                Chófer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesores-comerciales-en-cordoba">
-<span>
-
-                Asesores/as comerciales
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedora-en-cordoba">
-<span>
-
-                Vendedora
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-cordoba">
-<span>
-
-                Operario/a de depósito
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
