--- a/empleobusca.com/data/cordoba/cordoba_p11.html
+++ b/empleobusca.com/data/cordoba/cordoba_p11.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4213,118 +4213,6 @@ Hace  3  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-cordoba">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-higiene-y-seguridad-en-cordoba">
-<span>
-
-                Higiene y seguridad
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-cordoba">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-cordoba">
-<span>
-
-                Vendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-cordoba">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-cordoba">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-comercial-en-cordoba">
-<span>
-
-                Administrativo comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-cordoba">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administracion-en-cordoba">
-<span>
-
-                Administración
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-cliente-en-cordoba">
-<span>
-
-                Atención al cliente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-gerente-comercial-en-cordoba">
-<span>
-
-                Gerente comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-cordoba">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-en-cordoba">
-<span>
-
-                Ejecutivo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajero-en-cordoba">
-<span>
-
-                Cajero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-cordoba">
-<span>
-
-                Bartender
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
