--- a/empleobusca.com/data/cordoba/cordoba_p16.html
+++ b/empleobusca.com/data/cordoba/cordoba_p16.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4246,118 +4246,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-recepcionista-en-cordoba">
-<span>
-
-                Recepcionista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-contable-en-cordoba">
-<span>
-
-                Administrativo contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-cordoba">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-cordoba">
-<span>
-
-                Asesor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-armador-en-cordoba">
-<span>
-
-                Armador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-cordoba">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-cordoba">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comprador-en-cordoba">
-<span>
-
-                Comprador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-carpintero-en-cordoba">
-<span>
-
-                Carpintero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-cordoba">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-carnicero-en-cordoba">
-<span>
-
-                Carnicero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-residentes-en-cordoba">
-<span>
-
-                Residentes
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-cordoba">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-cordoba">
-<span>
-
-                Técnico electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-cordoba">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
