--- a/empleobusca.com/data/cordoba/cordoba_p19.html
+++ b/empleobusca.com/data/cordoba/cordoba_p19.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4277,118 +4277,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-cordoba">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-cordoba">
-<span>
-
-                Asesor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-mantenimiento-en-cordoba">
-<span>
-
-                Operario/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-cordoba">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-cordoba">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-soporte-en-cordoba">
-<span>
-
-                Técnico/a de soporte
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-cordoba">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-cliente-en-cordoba">
-<span>
-
-                Atención al cliente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-especialistas-en-cordoba">
-<span>
-
-                Especialistas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-cordoba">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-cordoba">
-<span>
-
-                Jefe de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-repositores-en-cordoba">
-<span>
-
-                Cajeros/as repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-cordoba">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-contable-en-cordoba">
-<span>
-
-                Administrativo contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-de-salon-en-cordoba">
-<span>
-
-                Vendedor/a de salón
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
