--- a/empleobusca.com/data/cordoba/cordoba_p2.html
+++ b/empleobusca.com/data/cordoba/cordoba_p2.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4316,118 +4316,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-cordoba">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recepcionista-en-cordoba">
-<span>
-
-                Recepcionista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-cordoba">
-<span>
-
-                Operario/a de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-personal-de-limpieza-en-cordoba">
-<span>
-
-                Personal de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-merchandiser-en-cordoba">
-<span>
-
-                Merchandiser
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-automoviles-en-cordoba">
-<span>
-
-                Vendedor automóviles
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-de-ventas-en-cordoba">
-<span>
-
-                Asesor/a de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-contables-y-administrativos-en-cordoba">
-<span>
-
-                Contables y administrativos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativa-en-cordoba">
-<span>
-
-                Administrativa
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recursos-humanos-en-cordoba">
-<span>
-
-                Recursos humanos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-de-cocina-en-cordoba">
-<span>
-
-                Ayudante de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-telemarketer-en-cordoba">
-<span>
-
-                Telemarketer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-desarrollador-en-cordoba">
-<span>
-
-                Desarrollador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-cordoba">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-cordoba">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
