--- a/empleobusca.com/data/cordoba/cordoba_p22.html
+++ b/empleobusca.com/data/cordoba/cordoba_p22.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4281,118 +4281,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-operario-en-cordoba">
-<span>
-
-                Operario/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-proyectos-en-cordoba">
-<span>
-
-                Proyectos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-higiene-y-seguridad-en-cordoba">
-<span>
-
-                Higiene y seguridad
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-camion-en-cordoba">
-<span>
-
-                Chófer de camión
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnicos-electronicos-en-cordoba">
-<span>
-
-                Técnicos electrónicos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativa-en-cordoba">
-<span>
-
-                Administrativa
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-armador-en-cordoba">
-<span>
-
-                Armador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-en-cordoba">
-<span>
-
-                Analista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-cordoba">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-cordoba">
-<span>
-
-                Asistente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comprador-en-cordoba">
-<span>
-
-                Comprador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-de-ventas-en-cordoba">
-<span>
-
-                Agente de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-cordoba">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-cordoba">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-auxiliar-en-cordoba">
-<span>
-
-                Auxiliar
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
