--- a/empleobusca.com/data/cordoba/cordoba_p27.html
+++ b/empleobusca.com/data/cordoba/cordoba_p27.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4231,118 +4231,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-de-cocina-en-cordoba">
-<span>
-
-                Ayudante de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-cordoba">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-armador-en-cordoba">
-<span>
-
-                Armador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recursos-humanos-en-cordoba">
-<span>
-
-                Recursos humanos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-cordoba">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comprador-en-cordoba">
-<span>
-
-                Comprador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-cordoba">
-<span>
-
-                Técnico electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-repositores-en-cordoba">
-<span>
-
-                Cajeros/as repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-automoviles-en-cordoba">
-<span>
-
-                Vendedor automóviles
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-proyectos-en-cordoba">
-<span>
-
-                Proyectos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-contable-en-cordoba">
-<span>
-
-                Analista contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-higiene-y-seguridad-en-cordoba">
-<span>
-
-                Higiene y seguridad
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-logistica-en-cordoba">
-<span>
-
-                Logística
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-desarrollador-en-cordoba">
-<span>
-
-                Desarrollador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-pastelero-en-cordoba">
-<span>
-
-                Pastelero/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
