--- a/empleobusca.com/data/cordoba/cordoba_p28.html
+++ b/empleobusca.com/data/cordoba/cordoba_p28.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4270,118 +4270,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-soporte-en-cordoba">
-<span>
-
-                Técnico/a de soporte
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-cordoba">
-<span>
-
-                Operario de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-en-cordoba">
-<span>
-
-                Cajeros/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-merchandiser-en-cordoba">
-<span>
-
-                Merchandiser
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-mantenimiento-en-cordoba">
-<span>
-
-                Técnico de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-cordoba">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-cordoba">
-<span>
-
-                Ejecutivo/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-cordoba">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-cordoba">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-desarrollador-en-cordoba">
-<span>
-
-                Desarrollador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-call-center-en-cordoba">
-<span>
-
-                Call center
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-contable-en-cordoba">
-<span>
-
-                Administrativo contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-promovendedor-en-cordoba">
-<span>
-
-                Promovendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-mantenimiento-en-cordoba">
-<span>
-
-                Operario/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-residentes-en-cordoba">
-<span>
-
-                Residentes
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
