--- a/empleobusca.com/data/cordoba/cordoba_p3.html
+++ b/empleobusca.com/data/cordoba/cordoba_p3.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4198,118 +4198,6 @@ Hace  2  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-cordoba">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-cordoba">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-cordoba">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-en-cordoba">
-<span>
-
-                Ejecutivo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-carpintero-en-cordoba">
-<span>
-
-                Carpintero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-comercial-en-cordoba">
-<span>
-
-                Administrativo comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-carnicero-en-cordoba">
-<span>
-
-                Carnicero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-cordoba">
-<span>
-
-                Jefe de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recepcionista-en-cordoba">
-<span>
-
-                Recepcionista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-merchandiser-en-cordoba">
-<span>
-
-                Merchandiser
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-de-ventas-en-cordoba">
-<span>
-
-                Ejecutivo de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-cordoba">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-deposito-en-cordoba">
-<span>
-
-                Operarios/as de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-contable-en-cordoba">
-<span>
-
-                Analista contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-cordoba">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
