--- a/empleobusca.com/data/cordoba/cordoba_p30.html
+++ b/empleobusca.com/data/cordoba/cordoba_p30.html
@@ -46,7 +46,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4143,118 +4143,6 @@ Hace  2  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-cordoba">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-representante-comercial-en-cordoba">
-<span>
-
-                Representante comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-encargado-en-cordoba">
-<span>
-
-                Encargado/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comercial-en-cordoba">
-<span>
-
-                Comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-cordoba">
-<span>
-
-                Técnico/a electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-cordoba">
-<span>
-
-                Vendedor
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnicos-electronicos-en-cordoba">
-<span>
-
-                Técnicos electrónicos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-en-cordoba">
-<span>
-
-                Técnico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-cordoba">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-cordoba">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-call-center-en-cordoba">
-<span>
-
-                Call center
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-cordoba">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-de-ventas-en-cordoba">
-<span>
-
-                Asesor/a de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-reparto-en-cordoba">
-<span>
-
-                Chófer de reparto
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-cordoba">
-<span>
-
-                Ejecutivo comercial
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
