--- a/empleobusca.com/data/mendoza/mendoza_p1.html
+++ b/empleobusca.com/data/mendoza/mendoza_p1.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -3958,118 +3958,6 @@ Nos encontramos en la búsqueda de un Administrativo Contable - Analista de Egre
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-comercial-en-mendoza">
-<span>
-
-                Comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-mendoza">
-<span>
-
-                Operario/a de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-proyectos-en-mendoza">
-<span>
-
-                Proyectos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-mendoza">
-<span>
-
-                Operario/a de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-gerente-comercial-en-mendoza">
-<span>
-
-                Gerente comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-mendoza">
-<span>
-
-                Asistente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-de-ventas-en-mendoza">
-<span>
-
-                Agente de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-preventista-en-mendoza">
-<span>
-
-                Vendedor preventista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-mendoza">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-mendoza">
-<span>
-
-                Jefe de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajero-en-mendoza">
-<span>
-
-                Cajero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-logistica-en-mendoza">
-<span>
-
-                Logística
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-representante-comercial-en-mendoza">
-<span>
-
-                Representante comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mantenimientos-en-mendoza">
-<span>
-
-                Mantenimientos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operador-en-mendoza">
-<span>
-
-                Operador/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
