--- a/empleobusca.com/data/mendoza/mendoza_p10.html
+++ b/empleobusca.com/data/mendoza/mendoza_p10.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4013,118 +4013,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-mendoza">
-<span>
-
-                Vendedor
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-en-mendoza">
-<span>
-
-                Cajeros/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-en-mendoza">
-<span>
-
-                Administrativo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-representante-comercial-en-mendoza">
-<span>
-
-                Representante comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-desarrollador-en-mendoza">
-<span>
-
-                Desarrollador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-mendoza">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-mendoza">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-mendoza">
-<span>
-
-                Operario/a de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-mendoza">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-cliente-en-mendoza">
-<span>
-
-                Atención al cliente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-mendoza">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-atencion-al-publico-en-mendoza">
-<span>
-
-                Atención al público
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-contable-en-mendoza">
-<span>
-
-                Administrativo contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-mendoza">
-<span>
-
-                Vendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-de-ventas-en-mendoza">
-<span>
-
-                Asesor/a de ventas
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
