--- a/empleobusca.com/data/mendoza/mendoza_p12.html
+++ b/empleobusca.com/data/mendoza/mendoza_p12.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4025,118 +4025,6 @@ Hace  5  días</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-preventista-en-mendoza">
-<span>
-
-                Vendedor preventista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-en-mendoza">
-<span>
-
-                Administrativo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-mendoza">
-<span>
-
-                Operario/a de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-mendoza">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-promovendedor-en-mendoza">
-<span>
-
-                Promovendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-mantenimiento-en-mendoza">
-<span>
-
-                Técnico/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-mendoza">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-comercial-en-mendoza">
-<span>
-
-                Administrativo comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-carnicero-en-mendoza">
-<span>
-
-                Carnicero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-mendoza">
-<span>
-
-                Mecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-mendoza">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-contable-en-mendoza">
-<span>
-
-                Analista contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-lider-de-desarrollo-en-mendoza">
-<span>
-
-                Líder de desarrollo
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-representante-comercial-en-mendoza">
-<span>
-
-                Representante comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-mantenimiento-en-mendoza">
-<span>
-
-                Operario/a de mantenimiento
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
