--- a/empleobusca.com/data/mendoza/mendoza_p13.html
+++ b/empleobusca.com/data/mendoza/mendoza_p13.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4086,118 +4086,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-vendedora-en-mendoza">
-<span>
-
-                Vendedora
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-telefonico-en-mendoza">
-<span>
-
-                Vendedor telefónico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-call-center-en-mendoza">
-<span>
-
-                Call center
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-encargado-en-mendoza">
-<span>
-
-                Encargado/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-mendoza">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-mendoza">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-merchandiser-en-mendoza">
-<span>
-
-                Merchandiser
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-viajante-en-mendoza">
-<span>
-
-                Vendedor viajante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-clarkista-en-mendoza">
-<span>
-
-                Clarkista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-comercial-en-mendoza">
-<span>
-
-                Administrativo comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maquinista-en-mendoza">
-<span>
-
-                Maquinista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-mendoza">
-<span>
-
-                Cocinero
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-mantenimiento-en-mendoza">
-<span>
-
-                Técnico/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-supervisor-en-mendoza">
-<span>
-
-                Supervisor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-mendoza">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
