--- a/empleobusca.com/data/mendoza/mendoza_p14.html
+++ b/empleobusca.com/data/mendoza/mendoza_p14.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4001,118 +4001,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-de-ventas-en-mendoza">
-<span>
-
-                Ejecutivo de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-mendoza">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-mendoza">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-contable-en-mendoza">
-<span>
-
-                Analista contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-personal-de-limpieza-en-mendoza">
-<span>
-
-                Personal de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-mendoza">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-mendoza">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-mendoza">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-deposito-en-mendoza">
-<span>
-
-                Operarios/as de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-mendoza">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-clarkista-en-mendoza">
-<span>
-
-                Clarkista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-mendoza">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-telemarketer-en-mendoza">
-<span>
-
-                Telemarketer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-mendoza">
-<span>
-
-                Ejecutivo/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-auxiliar-en-mendoza">
-<span>
-
-                Auxiliar
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
