--- a/empleobusca.com/data/mendoza/mendoza_p16.html
+++ b/empleobusca.com/data/mendoza/mendoza_p16.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4099,118 +4099,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-mendoza">
-<span>
-
-                Asesor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recursos-humanos-en-mendoza">
-<span>
-
-                Recursos humanos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-telemarketer-en-mendoza">
-<span>
-
-                Telemarketer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-contable-en-mendoza">
-<span>
-
-                Analista contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-mendoza">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-mendoza">
-<span>
-
-                Vendedor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-gerente-comercial-en-mendoza">
-<span>
-
-                Gerente comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-en-mendoza">
-<span>
-
-                Chófer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-mendoza">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-de-ventas-en-mendoza">
-<span>
-
-                Agente de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-mendoza">
-<span>
-
-                Jefe de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-mendoza">
-<span>
-
-                Asistente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-comercial-en-mendoza">
-<span>
-
-                Comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recepcionista-en-mendoza">
-<span>
-
-                Recepcionista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-encargado-en-mendoza">
-<span>
-
-                Encargado/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
