--- a/empleobusca.com/data/mendoza/mendoza_p17.html
+++ b/empleobusca.com/data/mendoza/mendoza_p17.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4061,118 +4061,6 @@ Spa Sauna para hombres, necesita personal masculino, para trabajo por turnos en 
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-analista-en-mendoza">
-<span>
-
-                Analista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-en-mendoza">
-<span>
-
-                Chófer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-deposito-en-mendoza">
-<span>
-
-                Operarios/as de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-en-mendoza">
-<span>
-
-                Técnico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-de-salon-en-mendoza">
-<span>
-
-                Vendedor/a de salón
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operador-en-mendoza">
-<span>
-
-                Operador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-mendoza">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-mendoza">
-<span>
-
-                Jefe de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-coordinador-en-mendoza">
-<span>
-
-                Coordinador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-mendoza">
-<span>
-
-                Técnico electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-mendoza">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-de-soporte-en-mendoza">
-<span>
-
-                Técnico/a de soporte
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-mantenimiento-en-mendoza">
-<span>
-
-                Operario/a de mantenimiento
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-en-mendoza">
-<span>
-
-                Operarios/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-telefonico-en-mendoza">
-<span>
-
-                Vendedor telefónico
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
