--- a/empleobusca.com/data/mendoza/mendoza_p3.html
+++ b/empleobusca.com/data/mendoza/mendoza_p3.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4123,118 +4123,6 @@ Ayer</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-viajante-en-mendoza">
-<span>
-
-                Vendedor viajante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-de-cocina-en-mendoza">
-<span>
-
-                Ayudante de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-de-ventas-en-mendoza">
-<span>
-
-                Ejecutivo de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-mendoza">
-<span>
-
-                Ejecutivo comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-mendoza">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-en-mendoza">
-<span>
-
-                Chófer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-mendoza">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-bartender-en-mendoza">
-<span>
-
-                Bartender
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajero-en-mendoza">
-<span>
-
-                Cajero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-mendoza">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-proyectos-en-mendoza">
-<span>
-
-                Proyectos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-en-mendoza">
-<span>
-
-                Ejecutivo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-jefe-de-cocina-en-mendoza">
-<span>
-
-                Jefe de cocina
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-mendoza">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-mendoza">
-<span>
-
-                Operario de depósito
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
