--- a/empleobusca.com/data/mendoza/mendoza_p5.html
+++ b/empleobusca.com/data/mendoza/mendoza_p5.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4043,118 +4043,6 @@ Ayer</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-camarero-en-mendoza">
-<span>
-
-                Camarero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-encargado-en-mendoza">
-<span>
-
-                Encargado/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-mendoza">
-<span>
-
-                Mecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-comercial-en-mendoza">
-<span>
-
-                Ejecutivo/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativa-en-mendoza">
-<span>
-
-                Administrativa
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-en-mendoza">
-<span>
-
-                Vendedor
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-mendoza">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-mendoza">
-<span>
-
-                Operario de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-en-mendoza">
-<span>
-
-                Administrativo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-en-mendoza">
-<span>
-
-                Chófer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-mendoza">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mantenimientos-en-mendoza">
-<span>
-
-                Mantenimientos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-mecanico-en-mendoza">
-<span>
-
-                Mecánico/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-mendoza">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-mendoza">
-<span>
-
-                Técnico/a electromecánico
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
