--- a/empleobusca.com/data/mendoza/mendoza_p6.html
+++ b/empleobusca.com/data/mendoza/mendoza_p6.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4007,118 +4007,6 @@ Ayer</p></div></article>
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-mendoza">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-engineering-manager-en-mendoza">
-<span>
-
-                Engineering manager
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-de-ventas-en-mendoza">
-<span>
-
-                Asesor/a de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-recursos-humanos-en-mendoza">
-<span>
-
-                Recursos humanos
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-mendoza">
-<span>
-
-                Operario de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-preventista-en-mendoza">
-<span>
-
-                Vendedor preventista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maquinista-en-mendoza">
-<span>
-
-                Maquinista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maestranzas-en-mendoza">
-<span>
-
-                Maestranzas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-mendoza">
-<span>
-
-                Asistente
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-administrativo-contable-en-mendoza">
-<span>
-
-                Administrativo contable
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-rrhh-en-mendoza">
-<span>
-
-                Analista de rrhh
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ejecutivo-en-mendoza">
-<span>
-
-                Ejecutivo/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-logistica-en-mendoza">
-<span>
-
-                Logística
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-repositor-en-mendoza">
-<span>
-
-                Repositor/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-pastelero-en-mendoza">
-<span>
-
-                Pastelero/a
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
