--- a/empleobusca.com/data/mendoza/mendoza_p7.html
+++ b/empleobusca.com/data/mendoza/mendoza_p7.html
@@ -41,7 +41,7 @@
 <link href="//cp.ct-stc.com/web8/20251126.01_01.26/c/css/header_portal.css" rel="stylesheet" type="text/css"/>
 <header class="header_web" id="header_menu">
 <div class="container">
-<a class="logo" href="https://ar.computrabajo.com" title="Computrabajo">
+<a class="logo" title="Computrabajo" href="/data/home.html">
 <img alt="Computrabajo Argentina" class="logo_img" data-header-candidatos="" height="30" src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" width="133"/>
 </a>
 <div class="box_search_content" data-box-search-container="">
@@ -4046,118 +4046,6 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Siguiente
 
             </span>
-</div>
-<div class="mtB mbB">
-<p class="fs16 mb10">
-
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-repositores-en-mendoza">
-<span>
-
-                Repositores/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-chofer-de-reparto-en-mendoza">
-<span>
-
-                Chófer de reparto
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-maquinista-en-mendoza">
-<span>
-
-                Maquinista
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-mendoza">
-<span>
-
-                Cocinero
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-agente-inmobiliario-en-mendoza">
-<span>
-
-                Agente inmobiliario
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vigilador-en-mendoza">
-<span>
-
-                Vigilador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-telemarketer-en-mendoza">
-<span>
-
-                Telemarketer
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-produccion-en-mendoza">
-<span>
-
-                Operario de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cajeros-en-mendoza">
-<span>
-
-                Cajeros/as
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesores-comerciales-en-mendoza">
-<span>
-
-                Asesores/as comerciales
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-automoviles-en-mendoza">
-<span>
-
-                Vendedor automóviles
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-cocinero-en-mendoza">
-<span>
-
-                Cocinero/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-comercial-en-mendoza">
-<span>
-
-                Vendedor/a comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-mendoza">
-<span>
-
-                Operario/a de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-analista-de-compras-en-mendoza">
-<span>
-
-                Analista de compras
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
