Changes on Pages and Home

--- a/empleobusca.com/data/home.html
+++ b/empleobusca.com/data/home.html
@@ -96,7 +96,7 @@
 
 	<div class="container">
 
-		<a class="logo" title="Computrabajo" href="../data/home.html">
+		<a class="logo" title="Computrabajo" href="../home.html">
 
 			<img width="133" height="30" alt="Computrabajo Argentina" data-header-candidatos src="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" srcset="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/logos/logoct.svg" class="logo_img" />
 
