Changes on Pages about Logo, Cookies, Phone V3

--- a/empleobusca.com/data/home.html
+++ b/empleobusca.com/data/home.html
@@ -96,12 +96,8 @@
 
 			<img
             src="../data/logo_Empleo_Busca.png"
-            width="133"
-            height="30"
             alt="Empleo Busca Argentina"
             class="logo_img"
-            loading="eager"
-            decoding="async"
             />
 		</a>
 
@@ -118,6 +114,21 @@
 		
 
 <div class="box_login" data-login-menu>
+<style>
+     a.logo{
+        display: inline-flex;
+        align-items: center;
+        height: 60px;
+        }
+
+    a.logo .logo_img{
+        height: 32px;
+        width: auto;
+        max-width: 220px;
+        object-fit: contain;
+        display: block;
+        }
+</style>
 
     
 
