Changes Siguiente on BSAS P1

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -4387,7 +4387,7 @@ Hace  5  días</p></div></article>
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=2" title="Siguiente">
+<span class="b_primary w48 buildLink cp" href="buenos_aires_p2.html" title="Siguiente">
 
                 Siguiente
 
