Changes Siguiente on all pages

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p2.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p2.html
@@ -4244,11 +4244,11 @@ Acassuso, Buenos Aires-GBA
 Somos un grupo gastronómico consolidado que se encuentra en plena etapa de optimización de procesos,...
 Hace  7  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires" tag="1" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp" href="buenos_aires_p1.html" tag="1" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p3.html" title="Siguiente">
 
                 Siguiente
