--- a/empleobusca.com/data/cordoba/cordoba_p12.html
+++ b/empleobusca.com/data/cordoba/cordoba_p12.html
@@ -4241,12 +4241,11 @@ Hace  7  días</p></div></article>
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=13" title="Siguiente">
+<a class="b_primary w48 buildLink cp"  href="cordoba_p13.html" title="Siguiente">
 
                 Siguiente
 
-            </span>
-</div>
+            </a></div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
 <input id="hdCvHasIssues" type="hidden" value="True"/>
