--- a/empleobusca.com/data/mendoza/mendoza_p8.html
+++ b/empleobusca.com/data/mendoza/mendoza_p8.html
@@ -3989,12 +3989,11 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=9" title="Siguiente">
+<a class="b_primary w48 buildLink cp"  href="mendoza_p9.html" title="Siguiente">
 
                 Siguiente
 
-            </span>
-</div>
+            </a></div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
 <input id="hdCvHasIssues" type="hidden" value="True"/>
