--- a/empleobusca.com/data/buenos_aires/buenos_aires_p22.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p22.html
@@ -4221,11 +4221,11 @@ Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p><
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=23" title="Siguiente">
+<a class="b_primary w48 buildLink cp"  href="buenos_aires_p23.html" title="Siguiente">
 
                 Siguiente
 
-            </span>
+            </a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
