--- a/empleobusca.com/data/buenos_aires/buenos_aires_p7.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p7.html
@@ -4279,11 +4279,11 @@ Hace  5  días</p></div></article>
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=8" title="Siguiente">
+<a class="b_primary w48 buildLink cp"  href="buenos_aires_p8.html" title="Siguiente">
 
                 Siguiente
 
-            </span>
+            </a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251204.01_01.27/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
