--- a/empleobusca.com/data/mendoza/mendoza_p1.html
+++ b/empleobusca.com/data/mendoza/mendoza_p1.html
@@ -3953,12 +3953,11 @@ Nos encontramos en la búsqueda de un Administrativo Contable - Analista de Egre
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=2" title="Siguiente">
+<a class="b_primary w48 buildLink cp"  href="mendoza_p2.html" title="Siguiente">
 
                 Siguiente
 
-            </span>
-</div>
+            </a></div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
 <input id="hdCvHasIssues" type="hidden" value="True"/>
