--- a/empleobusca.com/data/mendoza/mendoza_p17.html
+++ b/empleobusca.com/data/mendoza/mendoza_p17.html
@@ -4056,12 +4056,11 @@ Spa Sauna para hombres, necesita personal masculino, para trabajo por turnos en 
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=18" title="Siguiente">
+<a class="b_primary w48 buildLink cp"  href="mendoza_p18.html" title="Siguiente">
 
                 Siguiente
 
-            </span>
-</div>
+            </a></div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
 <input id="hdCvHasIssues" type="hidden" value="True"/>
